# ChangeLog for dev-python/pykde
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pykde/ChangeLog,v 1.40 2008/12/15 04:14:11 neurogeek Exp $

  01 Aug 2010; Roman v. Gemmeren <strowi@hasnoname.de> pykde-3.16.2.ebuild:
  distutils_python_version deprecated. replaced with python_get_version

  14 Nov 2009; Jonathan Callen <abcd@gentoo.org> pykde-3.16.2.ebuild:
  Remove monolithic deps

  15 Dec 2008; Jesus Rivero <neurogeek@gentoo.org> pykde-3.16.2.ebuild:
  Updated dep versions wrt bug #250457

  04 Dec 2008; Tomas Chvatal <scarabeus@gentoo.org>
  -files/PyKDE-3.16.0-sip-4.7.patch, -pykde-3.16.0-r1.ebuild,
  pykde-3.16.2.ebuild:
  Update SRC_URI, per bug #249776. Remove old with ugly patching.

*pykde-3.16.2 (03 Dec 2008)

  03 Dec 2008; Patrick Lauer <patrick@gentoo.org> +pykde-3.16.2.ebuild:
  Bumping to 3.16.2, closing 214062

  19 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -pykde-3.16.0.ebuild:
  Old.

  19 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org> pykde-3.16.0-r1.ebuild:
  Depend on >=dev-python/PyQt-3.17.3, thanks to Bernd Steinhauser in bug 189575.

  30 Nov 2007; Markus Rothe <corsair@gentoo.org> pykde-3.16.0-r1.ebuild:
  Added ~ppc64

*pykde-3.16.0-r1 (11 Aug 2007)

  11 Aug 2007; Caleb Tennis <caleb@gentoo.org>
  +files/PyKDE-3.16.0-sip-4.7.patch, +pykde-3.16.0-r1.ebuild:
  bump to take in a patch for sip 4.7 compatibility

  11 Aug 2007; Caleb Tennis <caleb@gentoo.org> -pykde-3.11.3.ebuild:
  remove old version

  24 Jun 2007; Tiziano Müller <dev-zero@gentoo.org> pykde-3.11.3.ebuild,
  pykde-3.16.0.ebuild:
  Fixed $ROOT abuse (bug #167271) and some cleanup

  16 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> pykde-3.16.0.ebuild:
  Added the -i switch to the configure options and a DEPEND on either konsole
  or kdebase which was missing. Fixes bugs 132950 and 179135.

  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org> pykde-3.16.0.ebuild:
  keyworded ~amd64, bug 166411
