@@ -1,4 +1,6 @@
 DIST PyKDE-3.16.2.tar.bz2 960870 RMD160 2b829f24de2d8ac859008e99db0ac11fb897e965 SHA1 5f3f6074cdc06d5e99a729d1d7e34de0eb31fe90 SHA256 0a3aa6c29f474d9909d6d2e4037bddf21ed6db56e1a80fb446c82833204f4edd
+DIST PyKDE-3.16.7.tar.bz2 953394 RMD160 00176dd565f48b6a4cda8e321df5fdb220ab86fd SHA1 6c6b748cc0deb832ccdd3121e5335764002a5deb SHA256 01d6aa8753f89ace89a773d2a997888a68c702c9b8f6f579ce5d9f6ee2652913
 EBUILD pykde-3.16.2.ebuild 1666 RMD160 83d1ca17003d480e093c00fa6dd876f5f2fa1286 SHA1 3a31ae73dd7a767a92ef563a1e992210d907c5e2 SHA256 4f09617d1e085f384cb4ccfcdd0ea443735bb067fa7e1644f9867c516d63dc81
-MISC ChangeLog 5668 RMD160 6afc50f5a6de89f8b79e0a4696d638ca546145ee SHA1 f85699ccbc3854867d65f7b1f18f2bc6fa7cc91a SHA256 12d0f453577ace277c090d4b190ba6e5a09f8e20b14807eded42fb3f39d0075e
+EBUILD pykde-3.16.7.ebuild 1565 RMD160 31b224300baf57b5ee81f84403e2a087873bf512 SHA1 a5a9350638aa5b6bc9d9c96ffbf3780e508d46b9 SHA256 a5cb7ec2053abc79668aee50046613b4b71a02141ae0b811adf98f5df0592df7
+MISC ChangeLog 5801 RMD160 a2b2157f86f6ea4c38989775294c546b1e20f996 SHA1 44821b5776627fa24bef303f849d0fca080c8c2c SHA256 88208e8eebdb246d132e2c159b329b685b43f4bb646097a893281355d21e85c2
 MISC metadata.xml 176 RMD160 f6c916e88c7813a14809ccc85bfe6b123583b70b SHA1 187d1bb84b411181357907a01e149ef164b5aa48 SHA256 74186e1941285a1da54d7e4c54af27598f61a2b9a4e5748479a76c1ba1dd0f52
